Updated deprecated code

--- a/CrmPackage/WebResources/Script (JScript)/Organisation/arup_organisationrequestchange.htm
+++ b/CrmPackage/WebResources/Script (JScript)/Organisation/arup_organisationrequestchange.htm
@@ -34,7 +34,7 @@
 						if (this.status === 204) {
 							window.close();
 						} else {
-							Xrm.Utility.alertDialog(this.statusText);
+                            Xrm.Navigation.openAlertDialog(this.statusText);
 						}
 					}
 				};
