--- a/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
+++ b/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
@@ -179,14 +179,25 @@ There will be several copies of the web resource visible in the debugger as "aru
         }
 
         //to get the dynamic text for Back Button
-        function GetLabelTextForBackButton() {
-            var backButtonText;
+        function GetLabelTextForBackButton() {         
+           var backButtonText;
             if (formContext.Arup.ActiveTabName != undefined)
                  backButtonText = 'Back to the ' + formContext.Arup.ActiveTabName.replace(/[_]/g, " ");
             else 
                  backButtonText = 'Back to the Active Stage';
 
             return backButtonText;
+        }
+
+
+        function GetLabelTextForCommercialStage() {
+            var labelText;
+            if (formContext.Arup.IsInternalOpportunity(formContext))
+                 labelText = '</br><p>Internal Opportunity - Use buttons at top for next step:</br><ul><li>Close as Lost</li><li>Close as Won – CJN no CJN</li></ul></p>';
+            else 
+                 labelText = '</br><p>Use buttons at top for next step:</br><ul><li>Close as Lost</li><li>Close as Won – no CJN</li><li>Close as Won – CJN Needed</li></ul></p>';
+
+            return labelText;
         }
 
         // Ensure that the named tab is visible.
@@ -376,7 +387,7 @@ There will be several copies of the web resource visible in the debugger as "aru
                     'isredbutton': false
                 },
                 {
-                    'label': '</br><p>Use buttons at top for next step:</br><ul><li>Close as Lost</li><li>Close as Won – no CJN</li><li>Close as Won – CJN Needed</li></ul></p>',
+                    'label': function () { return GetLabelTextForCommercialStage(); },
                     'hidden': false,
                     'islabel': true
                 }
