Css changes for button

--- a/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
+++ b/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
@@ -118,7 +118,7 @@ There will be several copies of the web resource visible in the debugger as "aru
                 text-decoration: none;
             }*/
 
-            .greenButton:active {
+            .blueButton:active {
                 background: #91ac27;
                 box-shadow: 1px 1px 2px 2px #ab918f;
                 -webkit-box-shadow: 1px 1px 1px 1px #ab918f;
@@ -154,7 +154,7 @@ There will be several copies of the web resource visible in the debugger as "aru
         }
 
 
-        .greenButton {
+        .blueButton {
             -webkit-border-radius: 20px;
             -moz-border-radius: 20px;
             border-radius: 20px;
@@ -168,14 +168,14 @@ There will be several copies of the web resource visible in the debugger as "aru
             padding-right: 10px;
             padding-left: 10px;
             padding-bottom: 10px;
-            background-color: #2DAAE1;
+            background-color:#2DAAE1;
             text-decoration: none;
             display: inline-block;
             cursor: pointer;
             text-align: center;
             margin: 4px;
             cursor: pointer;
-    }
+        }
 
 
 
@@ -194,7 +194,7 @@ There will be several copies of the web resource visible in the debugger as "aru
             padding-right: 10px;
             padding-left: 10px;
             padding-bottom: 10px;
-            background-color: #00B050;
+            background-color: #1AAC90;
             text-decoration: none;
             display: inline-block;
             cursor: pointer;
@@ -211,7 +211,7 @@ There will be several copies of the web resource visible in the debugger as "aru
             text-decoration: none;
     }
                         
-    .greenButton:hover {
+    .blueButton:hover {
             background: #0F5573;
             text-decoration: none;
     }                  
@@ -310,7 +310,7 @@ There will be several copies of the web resource visible in the debugger as "aru
                         span.className = "mainButton";
 
                         if (!button.isredbutton)
-                            span.className = "greenButton";
+                            span.className = "blueButton";
 
                         if (button.islabel)
                             span.className = "label";
