bug fix in client overview report

--- a/CrmPackage/WebResources/Script (JScript)/Organisation/ClientOverViewReport.html
+++ b/CrmPackage/WebResources/Script (JScript)/Organisation/ClientOverViewReport.html
@@ -554,7 +554,7 @@
                         }
                     });
                     if (accounts.length > 0) {
-                        parentaccountid = accounts[0].id;
+                        parentaccountid = accounts[0].accountid;
                     }
                 }
             }
