Changes in function SetupArupInternal + HideShowBidDevTab

--- a/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
+++ b/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
@@ -258,7 +258,7 @@ There will be several copies of the web resource visible in the debugger as "aru
         function GetLabelTextForCommercialStage() {
             var labelText;
             if (formContext.Arup.IsInternalOpportunity(formContext))
-                labelText = '</br><p>Internal Opportunity - Use buttons at top for next step:</br><ul><li>Close as Lost</li><li>Close as Won – CJN no CJN</li></ul></p>';
+                labelText = '</br><p>Internal Opportunity - Use buttons at top for next step:</br><ul><li>Close as Lost</li><li>Close as Won – no CJN</li></ul></p>';
             else
                 labelText = '</br><p>Use buttons at top for next step:</br><ul><li>Close as Lost</li><li>Close as Won – no CJN</li><li>Close as Won – CJN Needed</li></ul></p>';
 
