WIP on removing deprecations

--- a/CrmPackage/WebResources/Script (JScript)/BidReview/arup_bidReviewTabs.html
+++ b/CrmPackage/WebResources/Script (JScript)/BidReview/arup_bidReviewTabs.html
@@ -51,7 +51,7 @@
 		}
 	</style>
 
-	<script src="ClientGlobalContext.js.aspx" type="text/javascript"></script>
+	<!--<script src="ClientGlobalContext.js.aspx" type="text/javascript"></script>-->
     <script>
 
         pinnedTabs = ['tab_reloppdet', 'tab_BackgroundInfo_tickboxes'];
