Updated JS code to remove deprecated code

--- a/CrmPackage/WebResources/Web Page (HTML)/arup_DuplicateCheckResult.html
+++ b/CrmPackage/WebResources/Web Page (HTML)/arup_DuplicateCheckResult.html
@@ -79,6 +79,7 @@
         }
 
         function getDupeCheckResults(dataPar) {
+            debugger;
             var dataParam = dataPar;
             var strURL = getClientUrl();
             var resJsonMsg = parent.Xrm.Page.getAttribute("arup_dupecheckresult").getValue();
