--- a/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
+++ b/CrmPackage/WebResources/Script (JScript)/Opportunity/arup_opportunitybuttons.html
@@ -219,7 +219,6 @@ There will be several copies of the web resource visible in the debugger as "aru
         }
     </style>
 
-    <script src="ClientGlobalContext.js.aspx" type="text/javascript"></script>
     <script src="ccrm_ms_jQuery1102" type="text/javascript"></script>
 </head>
 
@@ -229,7 +228,28 @@ There will be several copies of the web resource visible in the debugger as "aru
     <script>
         // Static form context value to be used throughout the page.
         // Note that this use of Xrm>Page is not deprecated (currently as of 04/20)
-        var formContext = parent.Xrm.Page;
+        //  var formContext = parent.Xrm.Page;
+       var Xrm;
+       var formContext;
+
+        function setClientApiContext(xrm, formContext1) {
+            // Optionally set Xrm and formContext as global variables on the page.
+            window.Xrm = xrm;
+            window._formContext = formContext1;
+            formContext = formContext1;
+
+              // Tab number is specified as part of the data argument to the web resource.
+                    tabName = location.search.split("=")[1];
+                      tabNumber = parent.Arup.GetTabNumber(formContext, tabName);
+                    console.log("Setup for tab " + tabName);
+                    setupButtonsForTab(tabNumber);
+                    parent.Arup.OnDisplayingTab(formContext, tabName,
+                        function () {
+                            setupButtonsForTab(tabNumber);
+                        });
+ 
+        }
+
 
         // Central logging function.
         var Log = function (s) { console.log(s) };
@@ -237,17 +257,17 @@ There will be several copies of the web resource visible in the debugger as "aru
         // Go back to the previous tab.
         function ReturnToActiveTab() {
 
-            var activeTabName = formContext.Arup.ActiveTabName;
-            if (activeTabName != null) {
-                DisplayTab(activeTabName);
+            var mainActiveTabForStage = parent.Arup.MainActiveTabForStage;
+            if (mainActiveTabForStage != null) {
+                DisplayTab(mainActiveTabForStage);
             }
         }
 
         //to get the dynamic text for Back Button
         function GetLabelTextForBackButton() {
             var backButtonText;
-            if (formContext.Arup.ActiveTabName != undefined)
-                backButtonText = 'Back to the ' + formContext.Arup.ActiveTabName.replace(/[_]/g, " ");
+            if (parent.Arup.MainActiveTabForStage != undefined)
+                backButtonText = 'Back to the ' + parent.Arup.MainActiveTabForStage.replace(/[_]/g, " ");
             else
                 backButtonText = 'Back to the Active Stage';
 
@@ -257,7 +277,7 @@ There will be several copies of the web resource visible in the debugger as "aru
 
         function GetLabelTextForCommercialStage() {
             var labelText;
-            if (formContext.Arup.IsInternalOpportunity(formContext))
+            if (parent.Arup.IsInternalOpportunity(formContext))
                 labelText = '</br><p>Internal Opportunity - Use buttons at top for next step:</br><ul><li>Close as Lost</li><li>Close as Won – no CJN</li></ul></p>';
             else
                 labelText = '</br><p>Use buttons at top for next step:</br><ul><li>Close as Lost</li><li>Close as Won – no CJN</li><li>Close as Won – CJN Needed</li></ul></p>';
@@ -268,7 +288,7 @@ There will be several copies of the web resource visible in the debugger as "aru
 
         function GetLabelTextForPJN() {
             var labelText;
-            if (formContext.Arup.IsRequestPossibleJobEnabled(formContext))
+            if (parent.Arup.IsRequestPossibleJobEnabled(formContext))
                 labelText = '</br><p>To request a possible job number use "Request Possible Job" button at top</p>';
             return labelText;
         }
@@ -276,13 +296,13 @@ There will be several copies of the web resource visible in the debugger as "aru
         // Ensure that the named tab is visible.
         function DisplayTab(newTabName) {
             console.log("Display tab:" + newTabName);
-            formContext.Arup.PreviousTab = tabName;
-            parent.Xrm.Page.Arup.DisplayTab(newTabName, formContext);
+            parent.Arup.PreviousTab = tabName;
+            parent.Arup.DisplayTab(newTabName, formContext);
         }
 
         // Move to next step in BPF
         function MoveNext() {
-            formContext.Arup.BPFMoveNext(formContext, function () {
+            parent.Arup.BPFMoveNext(formContext, function () {
                 // setupNavigationButtons(true);
             });
         }
@@ -355,9 +375,9 @@ There will be several copies of the web resource visible in the debugger as "aru
                     'label': 'Approve Decision to Bid',
                     'action': function () {
                         Log("Approving bid decision");
-                        formContext.Arup.BidDicisionConfirmation();
+                        parent.Arup.BidDicisionConfirmation();
                     },
-                    'hidden': function () { return !formContext.Arup.IsBidDicisionApprovalEnable(formContext); },
+                    'hidden': function () { return !parent.Arup.IsBidDicisionApprovalEnable(formContext); },
                     'isredbutton': true
                 },
                 {
@@ -366,13 +386,13 @@ There will be several copies of the web resource visible in the debugger as "aru
                         Log("Move next stage");
                         MoveNext();
                     },
-                    'hidden': function () { return formContext.Arup.IsBidDicisionApprovalEnable(formContext); },
+                    'hidden': function () { return parent.Arup.IsBidDicisionApprovalEnable(formContext); },
                     'isredbutton': true
 
                 },
                 {
                     'label': function () { return GetLabelTextForPJN(); },
-                    'hidden': function () { return !formContext.Arup.IsRequestPossibleJobEnabled(formContext); },
+                    'hidden': function () { return !parent.Arup.IsRequestPossibleJobEnabled(formContext); },
                     'islabel': true
                 }
             ],
@@ -387,7 +407,7 @@ There will be several copies of the web resource visible in the debugger as "aru
                 },
                 {
                     'label': function () { return GetLabelTextForPJN(); },
-                    'hidden': function () { return !formContext.Arup.IsRequestPossibleJobEnabled(formContext); },
+                    'hidden': function () { return !parent.Arup.IsRequestPossibleJobEnabled(formContext); },
                     'islabel': true
                 }
             ],
@@ -411,7 +431,7 @@ There will be several copies of the web resource visible in the debugger as "aru
                 },
                 {
                     'label': function () { return GetLabelTextForPJN(); },
-                    'hidden': function () { return !formContext.Arup.IsRequestPossibleJobEnabled(formContext); },
+                    'hidden': function () { return !parent.Arup.IsRequestPossibleJobEnabled(formContext); },
                     'islabel': true
                 }
             ],
@@ -420,18 +440,18 @@ There will be several copies of the web resource visible in the debugger as "aru
                     'label': 'Approve Bid Review',
                     'action': function () {
                         Log("Approve Bid Review");
-                        formContext.Arup.ApproveBidReview(formContext);
+                        parent.Arup.ApproveBidReview(formContext);
                     },
-                    'hidden': function () { return !formContext.Arup.IsApproveBidReviewEnabled(formContext); },
+                    'hidden': function () { return !parent.Arup.IsApproveBidReviewEnabled(formContext); },
                     'isredbutton': true
                 },
                 {
                     'label': 'Bid Submitted',
                     'action': function () {
                         Log("Bid Submitted");
-                        formContext.Arup.BidSubmitted(formContext);
+                        parent.Arup.BidSubmitted(formContext);
                     },
-                    'hidden': function () { return !formContext.Arup.IsBidSubmittedEnabled(formContext); },
+                    'hidden': function () { return !parent.Arup.IsBidSubmittedEnabled(formContext); },
                     'isredbutton': true
                 },
                 {
@@ -441,7 +461,7 @@ There will be several copies of the web resource visible in the debugger as "aru
                         Log("Move next stage");
                         MoveNext();
                     },
-                    'hidden': function () { return formContext.Arup.IsBidSubmittedEnabled(formContext) || formContext.Arup.IsApproveBidReviewEnabled(formContext); },
+                    'hidden': function () { return parent.Arup.IsBidSubmittedEnabled(formContext) || parent.Arup.IsApproveBidReviewEnabled(formContext); },
                     'isredbutton': true
                 }
             ],
@@ -450,9 +470,9 @@ There will be several copies of the web resource visible in the debugger as "aru
                     'label': 'Add Project Collaborators',
                     'action': function () {
                         Log("Add Project Collaborators");
-                        formContext.Arup.AddProjectParticipant(formContext);
+                        parent.Arup.AddProjectParticipant(formContext);
                     },
-                    'hidden': function () { return !formContext.Arup.IsAddProjectParticipantEnabled(formContext); },
+                    'hidden': function () { return !parent.Arup.IsAddProjectParticipantEnabled(formContext); },
                     'isredbutton': false
                 },
                 {
@@ -505,48 +525,45 @@ There will be several copies of the web resource visible in the debugger as "aru
                     'label': 'Approve PJN Group Leader',
                     'action': function () {
                         Log("Move next stage");
-                        // formContext.Arup.ApproveGroupLeader(formContext);
-                        formContext.Arup.PJNApproveGroupLeader();
+                        parent.Arup.PJNApproveGroupLeader();
                     },
-                    hidden: function () { return !formContext.Arup.IsGroupLeaderApprovalEnabled(formContext); },
+                    hidden: function () { return !parent.Arup.IsGroupLeaderApprovalEnabled(formContext); },
                     'isredbutton': true
                 },
                 {
                     'label': 'Approve PJN Regional Sector Leader',
                     'action': function () {
                         Log("Move next stage");
-                        formContext.Arup.PJNApproveRegionalSectorLeader(formContext);
-                        //formContext.Arup.ApproveSectorLeader(formContext);
+                        parent.Arup.PJNApproveRegionalSectorLeader(formContext);
                     },
-                    hidden: function () { return !formContext.Arup.IsRegionalSectorLeaderApprovalEnabled(formContext); },
+                    hidden: function () { return !parent.Arup.IsRegionalSectorLeaderApprovalEnabled(formContext); },
                     'isredbutton': true
                 },
                 {
                     'label': 'Approve PJN  Sector Leader',
                     'action': function () {
                         Log("Move next stage");
-                        formContext.Arup.PJNApproveSectorLeader(formContext);
+                        parent.Arup.PJNApproveSectorLeader(formContext);
                     },
-                    hidden: function () { return !formContext.Arup.IsSectorLeaderApprovalEnabled(formContext); },
+                    hidden: function () { return !parent.Arup.IsSectorLeaderApprovalEnabled(formContext); },
                     'isredbutton': true
                 },
                 {
                     'label': 'Approve Bid Director ',
                     'action': function () {
                         Log("Move next stage");
-                        formContext.Arup.PJNApproveBidDirector(formContext);
+                        parent.Arup.PJNApproveBidDirector(formContext);
                     },
-                    hidden: function () { return !formContext.Arup.IsBidDirectorApprovalEnabled(formContext); },
+                    hidden: function () { return !parent.Arup.IsBidDirectorApprovalEnabled(formContext); },
                     'isredbutton': true
                 },
                 {
                     'label': 'Approve Regional COO',
                     'action': function () {
                         Log("Move next stage");
-                        formContext.Arup.PJNApproveRegionalCOO(formContext);
-                        //formContext.Arup.ApproveRegionalCOO(formContext);
+                        parent.Arup.PJNApproveRegionalCOO(formContext);
                     },
-                    hidden: function () { return !formContext.Arup.IsRegionalCOOApprovalEnabled(formContext); },
+                    hidden: function () { return !parent.Arup.IsRegionalCOOApprovalEnabled(formContext); },
                     'isredbutton': true
                 },
                 {
@@ -557,7 +574,7 @@ There will be several copies of the web resource visible in the debugger as "aru
                         MoveNext();
                     },
                     hidden: function () {
-                        return (formContext.Arup.IsGroupLeaderApprovalEnabled(formContext) || formContext.Arup.IsRegionalSectorLeaderApprovalEnabled(formContext) || formContext.Arup.IsSectorLeaderApprovalEnabled(formContext) || formContext.Arup.IsBidDirectorApprovalEnabled(formContext) || formContext.Arup.IsRegionalCOOApprovalEnabled(formContext));
+                        return (parent.Arup.IsGroupLeaderApprovalEnabled(formContext) || parent.Arup.IsRegionalSectorLeaderApprovalEnabled(formContext) || parent.Arup.IsSectorLeaderApprovalEnabled(formContext) || parent.Arup.IsBidDirectorApprovalEnabled(formContext) || parent.Arup.IsRegionalCOOApprovalEnabled(formContext));
                     },
                     'isredbutton': true
                 }
@@ -568,38 +585,36 @@ There will be several copies of the web resource visible in the debugger as "aru
                     'label': 'Approve Group Leader',
                     'action': function () {
                         Log("Approve Group Leade");
-                        // formContext.Arup.ApproveGroupLeader(formContext);
-                        formContext.Arup.CJNApproveGroupLeader();
+                        parent.Arup.CJNApproveGroupLeader();
                     },
-                    hidden: function () { return !formContext.Arup.IsCJNGroupLeaderApprovalEnabled(formContext); },
+                    hidden: function () { return !parent.Arup.IsCJNGroupLeaderApprovalEnabled(formContext); },
                     'isredbutton': true
                 },
                 {
                     'label': 'Approve Project Manager/Director',
                     'action': function () {
                         Log("Approve Project Manager/Director");
-                        formContext.Arup.CJNApprovePMPD(formContext);
-                        //formContext.Arup.ApproveSectorLeader(formContext);
+                        parent.Arup.CJNApprovePMPD(formContext);
                     },
-                    hidden: function () { return !formContext.Arup.IsPMPDApprovalEnabled(formContext); },
+                    hidden: function () { return !parent.Arup.IsPMPDApprovalEnabled(formContext); },
                     'isredbutton': true
                 },
                 {
                     'label': 'Approve Accounting Centre',
                     'action': function () {
                         Log("Approve Accounting Centre");
-                        formContext.Arup.CJNApproveAccountingCentre(formContext);
+                        parent.Arup.CJNApproveAccountingCentre(formContext);
                     },
-                    hidden: function () { return !formContext.Arup.IsAccCentreApprovalEnabled(formContext); },
+                    hidden: function () { return !parent.Arup.IsAccCentreApprovalEnabled(formContext); },
                     'isredbutton': true
                 },
                 {
                     'label': 'Approve Finance',
                     'action': function () {
                         Log("Approve Finance");
-                        formContext.Arup.CJNApproveFinance(formContext);
+                        parent.Arup.CJNApproveFinance(formContext);
                     },
-                    hidden: function () { return !formContext.Arup.IsFinanceApprovalEnabled(formContext); },
+                    hidden: function () { return !parent.Arup.IsFinanceApprovalEnabled(formContext); },
                     'isredbutton': true
                 },
 
@@ -625,15 +640,16 @@ There will be several copies of the web resource visible in the debugger as "aru
                 if (location.search == "") {
                     console.error("No tab name given");
                 } else {
-                    // Tab number is specified as part of the data argument to the web resource.
-                    tabName = location.search.split("=")[1];
-                    tabNumber = formContext.Arup.GetTabNumber(formContext, tabName);
-                    console.log("Setup for tab " + tabName);
-                    setupButtonsForTab(tabNumber);
-                    formContext.Arup.OnDisplayingTab(formContext, tabName,
-                        function () {
-                            setupButtonsForTab(tabNumber);
-                        });
+                    //// Tab number is specified as part of the data argument to the web resource.
+                    //tabName = location.search.split("=")[1];
+                    ////tabNumber = formContext.Arup.GetTabNumber(formContext, tabName);
+                    //  tabNumber = parent.Arup.GetTabNumber(formContext, tabName);
+                    //console.log("Setup for tab " + tabName);
+                    //setupButtonsForTab(tabNumber);
+                    //parent.Arup.OnDisplayingTab(formContext, tabName,
+                    //    function () {
+                    //        setupButtonsForTab(tabNumber);
+                    //    });
                 }
             }
         }
