1. Code to add button navigation on Framework,FrameworkSecured 2. on arup_whatsNewWelcomeScreen - removed the clientglobalcontext page reference

--- a/CrmPackage/WebResources/Script (JScript)/All Other Entities/arup_whatsNewWelcomeScreen.htm
+++ b/CrmPackage/WebResources/Script (JScript)/All Other Entities/arup_whatsNewWelcomeScreen.htm
@@ -3,6 +3,7 @@
     <script type="text/javascript">
 
         function onLoadFunction() {
+            Xrm = parent.Xrm;
             var pageInput = {
                 pageType: "webresource",
                 webresourceName: "arup_WhatsNewPage",
@@ -21,12 +22,12 @@
                 function error() {
                 }
             );
+
         }
 
     </script>
 
     <script src="mag_/jquery1.8.3.min.js" type="text/javascript"></script>
-    <script src="../../../../../../webresources/ClientGlobalContext.js.aspx" type="text/javascript"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta>
