--- a/CrmPackage/WebResources/Script (JScript)/Contact/arup_contactRejectionReason.htm
+++ b/CrmPackage/WebResources/Script (JScript)/Contact/arup_contactRejectionReason.htm
@@ -1,5 +1,7 @@
 ﻿<html>
 <head>
+    <script src="mag_/jquery1.8.3.min.js" type="text/javascript"></script>
+    <script src="arup_alert.js" type="text/javascript"></script>
     <script type="text/javascript">
 
         function getUrlParameters() {
@@ -31,7 +33,7 @@
         function showHideOtherField() {
             var otherReason = document.getElementById("otherRejectReason");
             var reason = document.getElementById("rejectReason");
-            var otherReasonlbl = document.getElementById("lblOtherReason");           
+            var otherReasonlbl = document.getElementById("lblOtherReason");
 
             if (reason.value != "770000004") {
                 otherReason.style.visibility = "hidden";
@@ -68,7 +70,6 @@
                     return;
                 }
 
-                var req = new XMLHttpRequest();
                 req.open("PATCH", params.clienturl + "/api/data/v9.1/contacts(" + params.contactid + ")", false);
                 req.setRequestHeader("OData-MaxVersion", "4.0");
                 req.setRequestHeader("OData-Version", "4.0");
@@ -81,7 +82,7 @@
                         if (this.status === 204) {
                             window.close();
                         } else {
-                            Xrm.Navigation.openAlertDialog(this.statusText);
+                            ArupAlert.alertDialog("Error rejecting contact: " + this.statusText);
                         }
                     }
                 };
@@ -97,8 +98,6 @@
         }
 
     </script>
-    <script src="../../../../../../webresources/ClientGlobalContext.js.aspx" type="text/javascript"></script>
-    <script src="mag_/jquery1.8.3.min.js" type="text/javascript"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
