--- a/CrmPackage/WebResources/Script (JScript)/Contact/arup_contactRejectionReason.htm
+++ b/CrmPackage/WebResources/Script (JScript)/Contact/arup_contactRejectionReason.htm
@@ -70,6 +70,7 @@
                     return;
                 }
 
+                var req = new XMLHttpRequest();
                 req.open("PATCH", params.clienturl + "/api/data/v9.1/contacts(" + params.contactid + ")", false);
                 req.setRequestHeader("OData-MaxVersion", "4.0");
                 req.setRequestHeader("OData-Version", "4.0");
