--- a/CrmPackage/WebResources/Web Page (HTML)/ccrm_duplicatebids.html
+++ b/CrmPackage/WebResources/Web Page (HTML)/ccrm_duplicatebids.html
@@ -1,5 +1,5 @@
 ﻿<html><head>
-    <script src="../../../../../../webresources/ClientGlobalContext.js.aspx" type="text/javascript"></script>
+    <script src="arup_alert.js" type="text/javascript"></script>
     <script src="ccrm_duplicatebid.js" type="text/javascript"></script>
     <script src="mag_/jquery1.8.3.min.js" type="text/javascript"></script>
 
@@ -35,7 +35,8 @@
     <meta>
     <meta>
     <meta>
-<meta></head>
+    <meta>
+</head>
 <body style="font-family: Calibri; word-wrap: break-word;">
     <div style="align-content:center;font-size:12pt;font-weight:bold;margin-top:5px">Similar Bids</div>
     <div style="border: 1px solid #e9e9e9; margin-top: 5px">
@@ -186,12 +187,4 @@
     <div style="overflow-y:scroll;height:450px;width:100%;display:none;font-family: Calibri;font-size: 9pt;" id="divResult">
         <table style="font-size: 9pt;border:1px solid #d9d9d9; width: 100%" cellpadding="0" cellspacing="0" id="dataTable"></table>
     </div>
-
-    <!--<div style="float: right; padding-right: 5px;display:none" id="footerDiv">
-            <input id="btnRunReport" type="button" value="Ok" onclick="$('#InlineDialogCloseLink').click();" title="click to view report data" />
-    </div>-->
-
-
-
-
 </body></html>
