--- a/CrmPackage/WebResources/Web Page (HTML)/arup_FrameworkButtons.htm
+++ b/CrmPackage/WebResources/Web Page (HTML)/arup_FrameworkButtons.htm
@@ -154,7 +154,7 @@
 	<script>
 
         // Central logging function.
-        var Log = function (s) { console.log(s) };
+        Log = console.log.bind(window.console);
    
 
         // Setup buttons for the tab.
